add-istio-sidecar-injection.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: add-istio-injection
spec: 
  rules:
    - name: inject-sidecar
      match:
        resources:
          kinds:
            - Namespace
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              istio-injection: enabled
