audit-kong-routes-for-security-headers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-kong-security-headers
spec:
  validationFailureAction: Audit
  rules: 
    - name: check-kong-headers
      match: 
        resources:
          kinds:
            - KongRoute
      validate:
        message: "Kong routes must have security headers"
        pattern:
          headers:
            add:
              Content-Security-Policy: "default-scr 'self'"
